tests/error/comptime/check_dereference13.bz
// error: invalid memory access of an object of type 'int32'
// note: while evaluating expression at compile time
// note: address points to an object in this allocation, which was freed
// note: allocation was made while evaluating expression at compile time
// note: allocation was freed here
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		__builtin_inplace_construct(p, 0);
		__builtin_comptime_free(p);
		*p;
	});
}
